# doc_agent

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  spec.md  tsconfig.json  vite.config.ts
.cursor/rules/: ci-and-release.mdc  frontend-quality.mdc  maintainability-size.mdc  openspec-workflow.mdc  rust-module-testing.mdc
.github/workflows/: ci.yml  release.yml  spike-libxml-static.yml  spike-libxml-windows.yml
openspec/: project.md
scripts/: bundle-js-libs.mjs  calver-today.mjs  copy-markdown-vendor.mjs  generate-latest-json.mjs  markdown-bundle-entry.mjs  marp-bundle-entry.mjs
spikes/libxml-probe/: Cargo.toml
src/: App.tsx  index.css  main.tsx  types.test.ts  types.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/js/: docx.bundle.js  exceljs.bundle.js  markdown.bundle.js  marked.bundle.js  marp-core.bundle.js  pdf-lib.bundle.js  pptxgenjs.bundle.js
src-tauri/assets/markdown-templates/common/: base.css
src-tauri/assets/markdown-templates/report/: academic.css  business.css  data.css  github-dark.css  github-light.css  narrow.css
src-tauri/assets/markdown-templates/resume/: classic.css  compact.css  even.css  grid.css  modern.css  two-col.css
src-tauri/assets/markdown-templates/samples/: report-github-light.md  resume-classic.md  slide-default.md
src-tauri/assets/markdown-templates/slide/: academic.css  corporate.css  default.css  gaia.css  minimal-dark.css  uncover.css
src-tauri/assets/markdown-vendor/: bespoke-viewer.css
src-tauri/assets/skills/clarify/: SKILL.md
src-tauri/assets/skills/docx/: SKILL.md  editing.md  math.md
src-tauri/assets/skills/html-report/: SKILL.md
src-tauri/assets/skills/markdown/: SKILL.md
src-tauri/assets/skills/pdf/: SKILL.md  forms.md  reference.md
src-tauri/assets/skills/pptx/: SKILL.md  editing.md  pptxgenjs.md
src-tauri/assets/skills/profile/: SKILL.md
src-tauri/assets/skills/runtime/: SKILL.md
src-tauri/assets/skills/xlsx/: SKILL.md
src-tauri/assets/typst-templates/common/: exam.typ  fonts-stack-fallback.typ  fonts-stack-macos.typ  fonts-stack-windows.typ  fonts.typ  lecture.typ  page.typ  tokens.typ
src-tauri/assets/typst-templates/exam/: exam-en.typ  exam-zh.typ
src-tauri/assets/typst-templates/lecture/: lecture-en.typ  lecture-zh.typ
src-tauri/assets/typst-templates/paper/: paper-en.typ  paper-zh.typ
src-tauri/assets/typst-templates/report/: report-en.typ  report-zh.typ
src-tauri/assets/typst-templates/syntax/: typst-guide.md
src-tauri/capabilities/: default.json
src-tauri/examples/: spike_js.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/agent/: agents_md.rs  clarify_interaction.rs  compaction.rs  compaction_tests.rs  loop_runner.rs  loop_runner_tests.rs  loop_support.rs  loop_tool_batch.rs  mod.rs  model_catalog.rs  run_limiter.rs  session_title.rs  suggest.rs  title_gen.rs  tool_args.rs  turn_control.rs  types.rs
src-tauri/src/agent/provider/: deepseek.rs  kimi.rs  mimo.rs  mock.rs  mod.rs  openai_compat.rs  sse.rs  tests.rs
src-tauri/src/core/: asset_scope.rs  cache_paths.rs  file_locks.rs  mod.rs  project_files.rs  project_import.rs  provider_balance.rs  sandbox.rs  secrets.rs  skills.rs  store.rs  updater_cleanup.rs  web_search.rs
src-tauri/src/ipc/: mod.rs  provider_balance.rs  updater.rs
src-tauri/src/tools/: changed_paths.rs  clarify.rs  excel.rs  file_lock_integration.rs  fs.rs  image_download.rs  image_read.rs  io_plan.rs  mod.rs  office.rs  pdf.rs  pdf_cache.rs  pdf_judge.rs  pdf_read.rs  pdf_render_pages.rs  pdf_text_quality.rs  registry.rs  skill.rs  skill_run_tmp.rs  tests.rs  vision_subcall.rs  web.rs  word.rs
src-tauri/src/tools/data/: describe.rs  extract_docx.rs  mod.rs  preprocess.rs  query.rs  recalc.rs
src-tauri/src/tools/html_export/: mod.rs  print.rs
src-tauri/src/tools/markdown_html/: bundled.rs  convert.rs  mod.rs  output.rs  slide_bespoke.rs
src-tauri/src/tools/ooxml/: comment.rs  mod.rs  pack.rs  redline.rs  style_lint.rs  unpack.rs  validate.rs
src-tauri/src/tools/ooxml/validate/: error.rs  mod.rs  tests.rs  wellformed.rs
src-tauri/src/tools/ooxml/validate/rules/: mod.rs  opc.rs  pml.rs  scan.rs  sml.rs  wml.rs
src-tauri/src/tools/pdf_ops/: merge.rs  mod.rs  pages.rs
src-tauri/src/tools/runtime/: diagnostics.rs  mod.rs  normalize.rs  ops.rs  write_gate.rs
src-tauri/src/tools/typst_export/: bundled.rs  compile.rs  diagnostics.rs  guide_tests.rs  mod.rs
src/components/: AgentsMdIndicator.test.tsx  AgentsMdIndicator.tsx  ApiKeySection.tsx  AttachmentThumbnail.tsx  BuildArtifactsPanel.test.tsx  BuildArtifactsPanel.tsx  ChatInputToolbar.test.tsx  ChatInputToolbar.tsx  ChatPanel.test.tsx  ChatPanel.tsx  ClarifyQuestionCard.test.tsx  ClarifyQuestionCard.tsx  CommandPalette.test.tsx  CommandPalette.tsx  ComposerContextBar.tsx  ContextUsageIndicator.tsx  KeyEntry.tsx  (+47 more)
(+473 files in other folders)
