[package]
name = "doc-agent"
version = "0.1.0"
description = "Office document AI agent desktop app"
authors = ["doc-agent"]
edition = "2021"

[lib]
name = "doc_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
ureq = { version = "3", default-features = false, features = ["rustls"] }
flate2 = "1"
tar = "0.4"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
office_oxide = "0.1.2"
docx-rs = "0.4.20"
umya-spreadsheet = "3.0.0"
calamine = "0.35.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
async-trait = "0.1"
toml = "0.8"
walkdir = "2"
pdfium-render = "0.9"

[dev-dependencies]
tempfile = "3"
zip = "7.2.0"
