[package]
name = "doc-agent"
version = "2026.6.15"
description = "Office document AI agent desktop app"
authors = ["doc-agent"]
edition = "2021"

[lib]
name = "doc_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
ureq = { version = "3", default-features = false, features = ["rustls"] }
flate2 = "1"
tar = "0.4"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
office_oxide = "0.1.2"
umya-spreadsheet = "3.0.0"
calamine = "0.35.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
async-trait = "0.1"
toml = "0.8"
walkdir = "2"
pdfium-render = "0.9"
image = "0.25"
boa_engine = { version = "0.21.1", features = ["annex-b", "js"] }
polars = { version = "0.54", default-features = false, features = ["lazy", "sql", "csv", "serde"] }
ironcalc = "0.7.1"
lopdf = "0.38"
quick-xml = { version = "0.37", features = ["serialize"] }
zip = "7.2.0"
base64 = "0.22"
tavily = "2.1"

tempfile = "3"
tauri-plugin-process = "2"
typst-as-lib = { version = "0.14", features = ["typst-kit-fonts", "typst-kit-embed-fonts"] }
typst = "0.13"
typst-pdf = "0.13"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData", "NSError"] }
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKPDFConfiguration", "block2"] }

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_Foundation"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[dev-dependencies]
tempfile = "3"
tauri = { version = "2", features = ["test"] }
serial_test = "3"

[[example]]
name = "spike_js"
path = "examples/spike_js.rs"
